@@ -1,3 +1,15 @@
+2011-05-23  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r87007.
+        http://trac.webkit.org/changeset/87007
+        https://bugs.webkit.org/show_bug.cgi?id=61329
+
+        patch unnecessarily breaks HTML5 compatibility (Requested by
+        estes on #webkit).
+
+        * fast/replaced/object-with-non-empty-classid-triggers-fallback-expected.txt:
+        * fast/replaced/object-with-non-empty-classid-triggers-fallback.html:
+
 2011-05-23  Julien Chaffraix  <jchaffraix@codeaurora.org>
 
         Reviewed by Darin Adler.
